src/antlrmathevaluator/antlr4/output/MathEvaluatorParser.java
package antlrmathevaluator.antlr4.output;

import java.util.HashMap;
import java.util.Map;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MathEvaluatorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMA=1, LPAREN=2, RPAREN=3, GT=4, LT=5, RSHIFT=6, LSHIFT=7, ZRSHIFT=8, 
		NOT=9, BINV=10, QUESTION=11, COLON=12, EQUAL=13, LE=14, GE=15, NOTEQUAL=16, 
		AND=17, OR=18, INC=19, DEC=20, ADD=21, SUB=22, MUL=23, DIV=24, BITAND=25, 
		BITOR=26, CARET=27, MOD=28, MAX=29, MIN=30, ABS=31, NEG=32, CEIL=33, FLOOR=34, 
		ROUND=35, ACOS=36, ACOSH=37, ASIN=38, ASINH=39, ATAN=40, ATANH=41, ATAN2=42, 
		COS=43, COSH=44, EXP=45, EXPM1=46, LOG=47, LOG10=48, LOG1P=49, POW=50, 
		SIN=51, SINH=52, SQRT=53, TAN=54, TANH=55, TODEGREES=56, TORADIANS=57, 
		IntegerLiteral=58, FloatingPointLiteral=59, WS=60, COMMENT=61, LINE_COMMENT=62;
	public static final int
		RULE_math = 0, RULE_primary = 1, RULE_expression = 2, RULE_builtins = 3;
	public static final String[] ruleNames = {
		"math", "primary", "expression", "builtins"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'('", "')'", "'>'", "'<'", "'>>'", "'<<'", "'>>>'", "'!'", 
		"'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", 
		"'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'max'", 
		"'min'", "'abs'", "'neg'", "'ceil'", "'floor'", "'round'", "'acos'", "'acosh'", 
		"'asin'", "'asinh'", "'atan'", "'atanh'", "'atan2'", "'cos'", "'cosh'", 
		"'exp'", "'expm1'", "'log'", "'log10'", "'log1p'", "'pow'", "'sin'", "'sinh'", 
		"'sqrt'", "'tan'", "'tanh'", "'toDegrees'", "'toRadians'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMA", "LPAREN", "RPAREN", "GT", "LT", "RSHIFT", "LSHIFT", "ZRSHIFT", 
		"NOT", "BINV", "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", 
		"OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", 
		"MOD", "MAX", "MIN", "ABS", "NEG", "CEIL", "FLOOR", "ROUND", "ACOS", "ACOSH", 
		"ASIN", "ASINH", "ATAN", "ATANH", "ATAN2", "COS", "COSH", "EXP", "EXPM1", 
		"LOG", "LOG10", "LOG1P", "POW", "SIN", "SINH", "SQRT", "TAN", "TANH", 
		"TODEGREES", "TORADIANS", "IntegerLiteral", "FloatingPointLiteral", "WS", 
		"COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MathEvaluator.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MathEvaluatorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MathContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MathEvaluatorParser.EOF, 0); }
		public MathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterMath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitMath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitMath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathContext math() throws RecognitionException {
		MathContext _localctx = new MathContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_math);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(8);
			expression(0);
			setState(9);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryContext extends ParserRuleContext {
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
	 
		public PrimaryContext() { }
		public void copyFrom(PrimaryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrimaryIntegerContext extends PrimaryContext {
		public TerminalNode IntegerLiteral() { return getToken(MathEvaluatorParser.IntegerLiteral, 0); }
		public PrimaryIntegerContext(PrimaryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterPrimaryInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitPrimaryInteger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitPrimaryInteger(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrimaryFloatContext extends PrimaryContext {
		public TerminalNode FloatingPointLiteral() { return getToken(MathEvaluatorParser.FloatingPointLiteral, 0); }
		public PrimaryFloatContext(PrimaryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterPrimaryFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitPrimaryFloat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitPrimaryFloat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_primary);
		try {
			setState(13);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IntegerLiteral:
				_localctx = new PrimaryIntegerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(11);
				match(IntegerLiteral);
				}
				break;
			case FloatingPointLiteral:
				_localctx = new PrimaryFloatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(12);
				match(FloatingPointLiteral);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AdditiveExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public AdditiveExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterAdditiveExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitAdditiveExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitAdditiveExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrimaryExpressionContext extends ExpressionContext {
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public PrimaryExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterPrimaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitPrimaryExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitPrimaryExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MutiplicativeExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public MutiplicativeExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterMutiplicativeExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitMutiplicativeExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitMutiplicativeExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditionalExpressionContext extends ExpressionContext {
		public ExpressionContext test;
		public ExpressionContext condTrue;
		public ExpressionContext condFalse;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ConditionalExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterConditionalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitConditionalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitConditionalExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BuiltinExpressionContext extends ExpressionContext {
		public BuiltinsContext builtins() {
			return getRuleContext(BuiltinsContext.class,0);
		}
		public BuiltinExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterBuiltinExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitBuiltinExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitBuiltinExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditionalORExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ConditionalORExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterConditionalORExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitConditionalORExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitConditionalORExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ShiftExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ShiftExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterShiftExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitShiftExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitShiftExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditionalANDExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ConditionalANDExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterConditionalANDExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitConditionalANDExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitConditionalANDExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComparitiveExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ComparitiveExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterComparitiveExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitComparitiveExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitComparitiveExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BitwiseORExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public BitwiseORExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterBitwiseORExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitBitwiseORExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitBitwiseORExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PreFixExpressionContext extends ExpressionContext {
		public Token op;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PreFixExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterPreFixExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitPreFixExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitPreFixExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenExpressionContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParenExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterParenExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitParenExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitParenExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryNotInvExpressionContext extends ExpressionContext {
		public Token op;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public BinaryNotInvExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterBinaryNotInvExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitBinaryNotInvExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitBinaryNotInvExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BiteiseXORExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public BiteiseXORExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterBiteiseXORExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).exitBiteiseXORExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathEvaluatorVisitor ) return ((MathEvaluatorVisitor<? extends T>)visitor).visitBiteiseXORExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqualityExpressionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public EqualityExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathEvaluatorListener ) ((MathEvaluatorListener)listener).enterEqualityExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
